--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -1,10 +1,17 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col>
-        <ion-input placeholder="{{'SEARCH POKEMON'| translate}}" type="text" [formControl]="pokemon" (keyup.enter)="search()"></ion-input>
+      <ion-col size="2">
+        <ion-input class="input" placeholder="{{'SEARCH POKEMON'| translate}}" type="text" [formControl]="pokemon"
+                   (keyup.enter)="search()"></ion-input>
       </ion-col>
     </ion-row>
+      <ion-row *ngIf="filterByName">
+        {{'FILTER ON' | translate}}
+        <ion-chip>{{'NAME' | translate}}
+          <ion-icon name="close" (click)="clearName()"></ion-icon>
+        </ion-chip>
+      </ion-row>
     <ion-row>
       <ion-col *ngFor="let pokemon of pokemonArray" size="2">
         <ion-card (click)="goToDetails(pokemon.id)"
