--- a/src/app/components/all-pokemons/all-pokemons.component.scss
+++ b/src/app/components/all-pokemons/all-pokemons.component.scss
@@ -3,9 +3,10 @@ ion-card-content {
 }
 
 .pokemon-image {
-  width: 40px;
+  height: 50px;
 }
 
-//ion-grid {
-//  background-color: rgba(95,230,239,255);
-//}
+.input {
+  border: solid 1px #9e9e9ea6;
+  border-radius: 50px;
+}
