Create filter by type

--- a/src/app/components/all-pokemons/all-pokemons.component.scss
+++ b/src/app/components/all-pokemons/all-pokemons.component.scss
@@ -10,3 +10,7 @@ ion-card-content {
   border: solid 1px #9e9e9ea6;
   border-radius: 50px;
 }
+
+ion-button, ion-text {
+  font-family: 'Press Start 2P', cursive;
+}
