--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -1,11 +1,11 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="2">
+      <ion-col sizeXs="12" sizeLg="2">
         <ion-input class="input" placeholder="{{'SEARCH POKEMON'| translate}}" type="text" [formControl]="pokemon"
                    (keyup.enter)="filterByName()"></ion-input>
       </ion-col>
-      <ion-col>
+      <ion-col size="auto">
         <ion-text>Types :</ion-text>
         <ion-button (click)="filterByType('normal')" [ngStyle]="{'--background': colorEnum.normalColor}">Normal
         </ion-button>
@@ -61,7 +61,7 @@
       </ion-chip>
     </ion-row>
     <ion-row>
-      <ion-col *ngFor="let pokemon of pokemonArray" size="2">
+      <ion-col *ngFor="let pokemon of pokemonArray" sizeXs="12" sizeMd="4" sizeXl="2">
         <ion-card (click)="goToDetails(pokemon.id)"
                   [ngStyle]="{'cursor': 'pointer',
                   'background': pokemon.types.length == 1 ?
