--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -3,27 +3,36 @@
     <ion-row class="ion-justify-content-center">
       <h2 [innerHTML]="'NAMES.' + pokemon.name | translate"></h2>
     </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-col>
+    <ion-row>
+      <ion-col size="1">
         <ion-button (click)="previousPokemon()" *ngIf="pokemonId > 1">
           <ion-icon name="arrow-back-outline"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col offsetXs="8" offsetLg="10">
+        <ion-button (click)="nextPokemon()" *ngIf="pokemonId < 151">
+          <ion-icon name="arrow-forward-outline"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col sizeLg="10" pushLg="5">
         <ion-row>
           <ion-img id="img" (click)="playAudio()" [alt]="pokemon.name" [src]="pokemon.img"></ion-img>
         </ion-row>
         <ion-row>
           <ion-text *ngIf="pokemon.types.length == 1">
             {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_ONE' | translate}}
-            {{'TYPES.' + pokemon.types[0] | translate}} {{'POKEMON' | translate}}</ion-text>
+            {{'TYPES.' + pokemon.types[0] | translate}} {{'POKEMON' | translate}}.</ion-text>
           <ion-text *ngIf="pokemon.types.length > 1">
             {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_TWO' | translate}} {{'TYPES.' + pokemon.types[0] | translate}}
-            /{{'TYPES.' + pokemon.types[1] | translate}} {{'POKEMON' | translate}}</ion-text>
+            /{{'TYPES.' + pokemon.types[1] | translate}} {{'POKEMON' | translate}}.</ion-text>
+        </ion-row>
+        <ion-row>
           <ion-text [innerHTML]="'DESC.' + pokemon.name | translate"></ion-text>
         </ion-row>
         <ion-row>
-          <ion-col>
+          <ion-col sizeLg="1">
             <ion-text>{{'WEIGHT' | translate}}: {{pokemon.weight}}</ion-text>
           </ion-col>
           <ion-col>
@@ -31,10 +40,8 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col>
+          <ion-col sizeLg="2">
             <ion-text>{{'LEVEL' | translate}} :</ion-text>
-          </ion-col>
-          <ion-col>
             <ion-input (ionChange)="manageLevel($event)" max="100" min="1" type="number"></ion-input>
           </ion-col>
         </ion-row>
@@ -48,22 +55,17 @@
           </div>
         </ion-row>
       </ion-col>
-      <ion-col>
-        <ion-list>
-          <h1>{{'ATTACKS' | translate}}: </h1>
-          <!--          <ion-item *ngFor="let attacks of pokemon.attacks">-->
-          <!--            <ion-label>-->
-          <!--              {{attacks}}-->
-          <!--            </ion-label>-->
-          <!--          </ion-item>-->
-          <ion-text> Coming soon !</ion-text>
-        </ion-list>
-      </ion-col>
-      <ion-row>
-        <ion-button (click)="nextPokemon()" *ngIf="pokemonId < 151">
-          <ion-icon name="arrow-forward-outline"></ion-icon>
-        </ion-button>
-      </ion-row>
+<!--      <ion-col>-->
+<!--        <ion-list>-->
+<!--          <h1>{{'ATTACKS' | translate}}: </h1>-->
+<!--          &lt;!&ndash;          <ion-item *ngFor="let attacks of pokemon.attacks">&ndash;&gt;-->
+<!--          &lt;!&ndash;            <ion-label>&ndash;&gt;-->
+<!--          &lt;!&ndash;              {{attacks}}&ndash;&gt;-->
+<!--          &lt;!&ndash;            </ion-label>&ndash;&gt;-->
+<!--          &lt;!&ndash;          </ion-item>&ndash;&gt;-->
+<!--          <ion-text> Coming soon !</ion-text>-->
+<!--        </ion-list>-->
+<!--      </ion-col>-->
     </ion-row>
   </ion-grid>
 </ion-content>
