Minor UI and translation fixes

--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -13,7 +13,7 @@
           {{'TYPES.fire' | translate | typeName}}
         </ion-button>
         <ion-button (click)="filterByType('water')"
-                    [ngStyle]="{'--background': colorEnum.waterColor}">{{'TYPES.fire' | translate | typeName}}
+                    [ngStyle]="{'--background': colorEnum.waterColor}">{{'TYPES.water' | translate | typeName}}
         </ion-button>
         <ion-button (click)="filterByType('grass')"
                     [ngStyle]="{'--background': colorEnum.grassColor}">{{'TYPES.grass' | translate | typeName}}
