--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -56,18 +56,20 @@
         </ion-button>
       </ion-col>
     </ion-row>
-    <ion-row *ngIf="isFilteredByName||isFilteredByType">
+    <ion-row>
       <ion-col>
-      <ion-text>{{'FILTER ON' | translate}}</ion-text>
-      <ion-chip *ngIf="isFilteredByName">{{'NAME' | translate}} : {{pokemon.value | titlecase}}
-        <ion-icon name="close" (click)="clearName()"></ion-icon>
-      </ion-chip>
+        <ion-text>{{'FILTER ON' | translate}}</ion-text>
+        <ion-chip *ngIf="isFilteredByName">{{'NAME' | translate}} : {{pokemon.value | titlecase}}
+          <ion-icon name="close" (click)="clearName()"></ion-icon>
+        </ion-chip>
       </ion-col>
-      <ion-col *ngFor="let type of typeSelectedArray">
-      <ion-chip *ngIf="isFilteredByType">Type :
-        {{'TYPES.' + type | translate | typeName | titlecase}}
-        <ion-icon name="close" (click)="clearType(type)"></ion-icon>
-      </ion-chip>
+      <ion-col>
+        <ion-chip *ngFor="let type of typeSelectedArray;let i = index">
+          <ion-label>Type :
+            {{'TYPES.' + type | translate | typeName | titlecase}}
+            <ion-icon name="close" (click)="clearType(i)"></ion-icon>
+          </ion-label>
+        </ion-chip>
       </ion-col>
     </ion-row>
     <ion-row>
