--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -1,63 +1,63 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col sizeXs="12" sizeLg="2">
+      <ion-col sizeXs="12" sizeMd="3">
         <ion-input class="input" placeholder="{{'SEARCH POKEMON'| translate}}" type="text" [formControl]="pokemon"
                    (keyup.enter)="filterByName()"></ion-input>
       </ion-col>
       <ion-col size="auto">
         <ion-text>Types :</ion-text>
-        <ion-button (click)="filterByType('normal')" [ngStyle]="{'--background': colorEnum.normalColor}">Normal
+        <ion-button (click)="filterByType(['normal'])" [ngStyle]="{'--background': colorEnum.normalColor}">Normal
         </ion-button>
-        <ion-button (click)="filterByType('fire')" [ngStyle]="{'--background': colorEnum.fireColor}">
+        <ion-button (click)="filterByType(['fire'])" [ngStyle]="{'--background': colorEnum.fireColor}">
           {{'TYPES.fire' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('water')"
+        <ion-button (click)="filterByType(['water'])"
                     [ngStyle]="{'--background': colorEnum.waterColor}">{{'TYPES.water' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('grass')"
+        <ion-button (click)="filterByType(['grass'])"
                     [ngStyle]="{'--background': colorEnum.grassColor}">{{'TYPES.grass' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('electric')"
+        <ion-button (click)="filterByType(['electric'])"
                     [ngStyle]="{'--background': colorEnum.electricColor}">{{'TYPES.electric' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('ice')"
+        <ion-button (click)="filterByType(['ice'])"
                     [ngStyle]="{'--background': colorEnum.iceColor}">{{'TYPES.ice' | translate | typeName}}</ion-button>
-        <ion-button (click)="filterByType('fighting')"
+        <ion-button (click)="filterByType(['fighting'])"
                     [ngStyle]="{'--background': colorEnum.fightingColor}">{{'TYPES.fighting' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('poison')"
+        <ion-button (click)="filterByType(['poison'])"
                     [ngStyle]="{'--background': colorEnum.poisonColor}">{{'TYPES.poison' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('ground')"
+        <ion-button (click)="filterByType(['ground'])"
                     [ngStyle]="{'--background': colorEnum.groundColor}">{{'TYPES.ground' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('flying')"
+        <ion-button (click)="filterByType(['flying'])"
                     [ngStyle]="{'--background': colorEnum.flyingColor}">{{'TYPES.flying' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('psychic')"
+        <ion-button (click)="filterByType(['psychic'])"
                     [ngStyle]="{'--background': colorEnum.psychicColor}">{{'TYPES.psychic' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('bug')"
+        <ion-button (click)="filterByType(['bug'])"
                     [ngStyle]="{'--background': colorEnum.bugColor}">{{'TYPES.bug' | translate | typeName}}</ion-button>
-        <ion-button (click)="filterByType('rock')"
+        <ion-button (click)="filterByType(['rock'])"
                     [ngStyle]="{'--background': colorEnum.rockColor}">{{'TYPES.rock' | translate | typeName}}</ion-button>
-        <ion-button (click)="filterByType('ghost')"
+        <ion-button (click)="filterByType(['ghost'])"
                     [ngStyle]="{'--background': colorEnum.ghostColor}">{{'TYPES.ghost' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('dragon')"
+        <ion-button (click)="filterByType(['dragon'])"
                     [ngStyle]="{'--background': colorEnum.dragonColor}">{{'TYPES.dragon' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('fairy')"
+        <ion-button (click)="filterByType(['fairy'])"
                     [ngStyle]="{'--background': colorEnum.fairyColor}">{{'TYPES.fairy' | translate | typeName}}
         </ion-button>
-        <ion-button (click)="filterByType('steel')"
+        <ion-button (click)="filterByType(['steel'])"
                     [ngStyle]="{'--background': colorEnum.steelColor}">{{'TYPES.steel' | translate | typeName}}
         </ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
-        <ion-text *ngIf="typeSelectedArray.length || isFilteredByName">{{'FILTER ON' | translate}}</ion-text>
+      <ion-text *ngIf="typeSelectedArray.length || isFilteredByName">{{'FILTER ON' | translate}}</ion-text>
       <ion-col>
         <ion-chip *ngIf="isFilteredByName">{{'NAME' | translate}} : {{pokemon.value | titlecase}}
           <ion-icon name="close" (click)="clearName()"></ion-icon>
@@ -73,7 +73,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col *ngFor="let pokemon of pokemonArray" sizeXs="12" sizeMd="1">
+      <ion-col *ngFor="let pokemon of pokemonArray" sizeXs="12" sizeMd="2">
         <ion-card (click)="goToDetails(pokemon.id)"
                   [ngStyle]="{'cursor': 'pointer',
                   'background': pokemon.types.length == 1 ?
@@ -81,9 +81,10 @@
                   }"
         >
           <ion-card-header>
-            <ion-card-title><img class="pokemon-image" [src]="pokemon.img" alt="{{pokemon.name}}"/></ion-card-title>
+            <ion-card-title>#{{pokemon.id}}<img class="pokemon-image" [src]="pokemon.img" alt="{{pokemon.name}}"/>
+            </ion-card-title>
           </ion-card-header>
-          <ion-card-content>#{{pokemon.id}} <br> {{'NAMES.' + pokemon.name | translate}}</ion-card-content>
+          <ion-card-content>{{'NAMES.' + pokemon.name | translate}}</ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
