--- a/src/app/components/all-pokemons/all-pokemons.component.scss
+++ b/src/app/components/all-pokemons/all-pokemons.component.scss
@@ -14,3 +14,8 @@ ion-card-content {
 ion-button, ion-text {
   font-family: 'Press Start 2P', cursive;
 }
+
+.card-button {
+  font-size: 12px;
+  width: 90%;
+}
