--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -74,8 +74,8 @@
     </ion-row>
     <ion-row>
       <ion-col *ngFor="let pokemon of pokemonArray" sizeXs="12" sizeMd="2">
-        <ion-card (click)="goToDetails(pokemon.id)"
-                  [ngStyle]="{'cursor': 'pointer',
+        <ion-card
+          [ngStyle]="{'cursor': 'pointer',
                   'background': pokemon.types.length == 1 ?
                   pokemon.color[0] : 'linear-gradient(to right,'+ pokemon.color[0] + ',' + pokemon.color[1]+ ')'
                   }"
@@ -84,9 +84,23 @@
             <ion-card-title>#{{pokemon.id}}<img class="pokemon-image" [src]="pokemon.img" alt="{{pokemon.name}}"/>
             </ion-card-title>
           </ion-card-header>
-          <ion-card-content>{{'NAMES.' + pokemon.name | translate}}</ion-card-content>
+          <ion-card-content>
+            <ion-row>{{'NAMES.' + pokemon.name | translate}}</ion-row>
+            <ion-row>
+              <ion-col sizeMd="6">
+                <ion-button class="card-button" color="light"
+                            (click)="goToDetails(pokemon.id)">{{'DETAILS' | translate}}</ion-button>
+              </ion-col>
+              <ion-col sizeMd="6">
+                <ion-button class="card-button" color="light" [disabled]="team.length >= 6"
+                            (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()">{{'ADD' | translate}}
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
+  <app-team [team]="team"></app-team>
 </ion-content>
