WIP pokemon team column

--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,8 +1,28 @@
-<div class="team">
-  <ion-row>
-    <ion-col class="pokemon" *ngFor="let pokemon of this.trainerService.user.value.pokemonTeam"
+<div class="team" *ngIf="trainerService.user | async as user">
+  <ion-row *ngIf="user.login">
+    <ion-col class="pokemon"
              (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
-      <img class="pokemon-image" [src]="pokemon.img" alt="{{pokemon.name}}"/>
+      <img class="pokemon-image" [src]="user.pokemonTeam[0].img" alt="{{user.pokemonTeam[0].name}}"/>
+    </ion-col>
+    <ion-col class="pokemon"
+             (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
+      <img class="pokemon-image" [src]="user.pokemonTeam[1].img" alt="{{user.pokemonTeam[1].name}}"/>
+    </ion-col>
+    <ion-col class="pokemon"
+             (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
+      <img class="pokemon-image" [src]="user.pokemonTeam[2].img" alt="{{user.pokemonTeam[2].name}}"/>
+    </ion-col>
+    <ion-col class="pokemon"
+             (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
+      <img class="pokemon-image" [src]="user.pokemonTeam[3].img" alt="{{user.pokemonTeam[3].name}}"/>
+    </ion-col>
+    <ion-col class="pokemon"
+             (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
+      <img class="pokemon-image" [src]="user.pokemonTeam[4].img" alt="{{user.pokemonTeam[4].name}}"/>
+    </ion-col>
+    <ion-col class="pokemon"
+             (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
+      <img class="pokemon-image" [src]="user.pokemonTeam[5].img" alt="{{user.pokemonTeam[5].name}}"/>
     </ion-col>
   </ion-row>
   <ion-row>
