--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -2,27 +2,27 @@
   <ion-row *ngIf="user.login">
     <ion-col class="pokemon"
              (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
-      <img class="pokemon-image" [src]="user.pokemonTeam[0].img" alt="{{user.pokemonTeam[0].name}}"/>
+      <img *ngIf="user.pokemonTeam[0]" class="pokemon-image" [src]="user.pokemonTeam[0].img" alt="{{user.pokemonTeam[0].name}}"/>
     </ion-col>
     <ion-col class="pokemon"
              (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
-      <img class="pokemon-image" [src]="user.pokemonTeam[1].img" alt="{{user.pokemonTeam[1].name}}"/>
+      <img *ngIf="user.pokemonTeam[1]" class="pokemon-image" [src]="user.pokemonTeam[1].img" alt="{{user.pokemonTeam[1].name}}"/>
     </ion-col>
     <ion-col class="pokemon"
              (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
-      <img class="pokemon-image" [src]="user.pokemonTeam[2].img" alt="{{user.pokemonTeam[2].name}}"/>
+      <img *ngIf="user.pokemonTeam[2]" class="pokemon-image" [src]="user.pokemonTeam[2].img" alt="{{user.pokemonTeam[2].name}}"/>
     </ion-col>
     <ion-col class="pokemon"
              (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
-      <img class="pokemon-image" [src]="user.pokemonTeam[3].img" alt="{{user.pokemonTeam[3].name}}"/>
+      <img *ngIf="user.pokemonTeam[3]" class="pokemon-image" [src]="user.pokemonTeam[3].img" alt="{{user.pokemonTeam[3].name}}"/>
     </ion-col>
     <ion-col class="pokemon"
              (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
-      <img class="pokemon-image" [src]="user.pokemonTeam[4].img" alt="{{user.pokemonTeam[4].name}}"/>
+      <img *ngIf="user.pokemonTeam[4]" class="pokemon-image" [src]="user.pokemonTeam[4].img" alt="{{user.pokemonTeam[4].name}}"/>
     </ion-col>
     <ion-col class="pokemon"
              (mouseenter)="mouseEnter(true)" (mouseleave)="mouseLeave(false)">
-      <img class="pokemon-image" [src]="user.pokemonTeam[5].img" alt="{{user.pokemonTeam[5].name}}"/>
+      <img *ngIf="user.pokemonTeam[5]" class="pokemon-image" [src]="user.pokemonTeam[5].img" alt="{{user.pokemonTeam[5].name}}"/>
     </ion-col>
   </ion-row>
   <ion-row>
