--- a/src/app/components/team/team.component.scss
+++ b/src/app/components/team/team.component.scss
@@ -6,16 +6,14 @@
 
 .team {
   width: 40vw;
-  height: 10vh;
+  height: 20vh;
   background-color: rgba(96,230,239,255);
   border-radius: 50px;
 }
 
 .pokemon-image {
-  height: 20%;
-  margin-top: 10px;
-  margin-left: 20px;
-  background-color: rgba(134,254,253,255);
+  height: 75%;
+  background-color: transparent;
   box-shadow: 0 0 60px 40px rgba(134,254,253,255);
 }
 
