--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -74,7 +74,7 @@
     </ion-row>
     <ion-row>
       <ion-col *ngFor="let pokemon of pokemonArray" sizeXs="12" sizeMd="2">
-        <ion-card
+        <ion-card (click)="goToDetails(pokemon.id)"
           [ngStyle]="{'cursor': 'pointer',
                   'background': pokemon.types.length == 1 ?
                   pokemon.color[0] : 'linear-gradient(to right,'+ pokemon.color[0] + ',' + pokemon.color[1]+ ')'
@@ -87,13 +87,9 @@
           <ion-card-content>
             <ion-row>{{'NAMES.' + pokemon.name | translate}}</ion-row>
             <ion-row>
-              <ion-col sizeMd="6">
-                <ion-button class="card-button" color="light"
-                            (click)="goToDetails(pokemon.id)">{{'DETAILS' | translate}}</ion-button>
-              </ion-col>
-              <ion-col sizeMd="6">
+              <ion-col sizeMd="3">
                 <ion-button class="card-button" color="light" [disabled]="team.length >= 6"
-                            (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()">{{'ADD' | translate}}
+                            (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()">+
                 </ion-button>
               </ion-col>
             </ion-row>
