--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -74,9 +74,7 @@
     </ion-row>
     <ion-row>
       <ion-col *ngFor="let pokemon of pokemonArray" sizeXs="12" sizeMd="2">
-        <ion-card (click)="goToDetails(pokemon.id)"
-          [ngStyle]="{'cursor': 'pointer',
-                  'background': pokemon.types.length == 1 ?
+        <ion-card [ngStyle]="{'background': pokemon.types.length == 1 ?
                   pokemon.color[0] : 'linear-gradient(to right,'+ pokemon.color[0] + ',' + pokemon.color[1]+ ')'
                   }"
         >
@@ -92,11 +90,17 @@
                             (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()">+
                 </ion-button>
               </ion-col>
+              <ion-col sizeMd="3">
+                <ion-button class="card-button" color="light"
+                            (click)="goToDetails(pokemon.id)">
+                  <ion-icon name="search"></ion-icon>
+                </ion-button>
+              </ion-col>
             </ion-row>
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <app-team [team]="team" *ngIf="trainerService.user.value.login"></app-team>
+  <app-team *ngIf="trainerService.user.value.login"></app-team>
 </ion-content>
