--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,10 @@
       </ion-col>
       <ion-col offsetLg="5" *ngIf="(trainerService.user | async).connected">
         <ion-label>{{'USER POKEDEX' | translate : {user: (trainerService.user | async).login } }} </ion-label>
+        <ion-button [disabled]="!trainerService.user.value.login" color="light" (click)="goToTeam()">
+          <img src="assets/icons/pokeball.png" alt="pokeball" style="width: 30px">
+          <ion-badge color="danger">{{trainerService.getPokemonTeam().length}}</ion-badge>
+        </ion-button>
         <ion-button color="light" class="button"
                     (click)="goAccount()">{{'ACCOUNT' | translate}}</ion-button>
         <ion-button color="light" class="button" (click)="logOut()">{{'LOGOUT' | translate}}</ion-button>
