--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -23,13 +23,19 @@
         <ion-row>
           <ion-text *ngIf="pokemon.types.length == 1">
             {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_ONE' | translate}}
-            {{'TYPES.' + pokemon.types[0] | translate}} {{'POKEMON' | translate}}.</ion-text>
+            {{'TYPES.' + pokemon.types[0] | translate}} {{'POKEMON' | translate}}.
+          </ion-text>
           <ion-text *ngIf="pokemon.types.length > 1">
             {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_TWO' | translate}} {{'TYPES.' + pokemon.types[0] | translate}}
-            /{{'TYPES.' + pokemon.types[1] | translate}} {{'POKEMON' | translate}}.</ion-text>
+            /{{'TYPES.' + pokemon.types[1] | translate}} {{'POKEMON' | translate}}.
+          </ion-text>
         </ion-row>
         <ion-row>
           <ion-text [innerHTML]="'DESC.' + pokemon.name | translate"></ion-text>
+        </ion-row>
+        <ion-row (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()"
+        >
+          <ion-button>+</ion-button>
         </ion-row>
         <ion-row>
           <ion-col sizeLg="1">
@@ -55,17 +61,17 @@
           </div>
         </ion-row>
       </ion-col>
-<!--      <ion-col>-->
-<!--        <ion-list>-->
-<!--          <h1>{{'ATTACKS' | translate}}: </h1>-->
-<!--          &lt;!&ndash;          <ion-item *ngFor="let attacks of pokemon.attacks">&ndash;&gt;-->
-<!--          &lt;!&ndash;            <ion-label>&ndash;&gt;-->
-<!--          &lt;!&ndash;              {{attacks}}&ndash;&gt;-->
-<!--          &lt;!&ndash;            </ion-label>&ndash;&gt;-->
-<!--          &lt;!&ndash;          </ion-item>&ndash;&gt;-->
-<!--          <ion-text> Coming soon !</ion-text>-->
-<!--        </ion-list>-->
-<!--      </ion-col>-->
+      <!--      <ion-col>-->
+      <!--        <ion-list>-->
+      <!--          <h1>{{'ATTACKS' | translate}}: </h1>-->
+      <!--          &lt;!&ndash;          <ion-item *ngFor="let attacks of pokemon.attacks">&ndash;&gt;-->
+      <!--          &lt;!&ndash;            <ion-label>&ndash;&gt;-->
+      <!--          &lt;!&ndash;              {{attacks}}&ndash;&gt;-->
+      <!--          &lt;!&ndash;            </ion-label>&ndash;&gt;-->
+      <!--          &lt;!&ndash;          </ion-item>&ndash;&gt;-->
+      <!--          <ion-text> Coming soon !</ion-text>-->
+      <!--        </ion-list>-->
+      <!--      </ion-col>-->
     </ion-row>
   </ion-grid>
 </ion-content>
