--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,12 +1,20 @@
-<div *ngIf="trainerService.user | async as user">
-  <ion-row *ngIf="user.login" class="team">
-    <ion-col class="pokemon"
-             (mouseenter)="mouseEnter()" *ngFor="let pokemon of user.pokemonTeam; let i = index">
-      <img *ngIf="pokemon" class="pokemon-image" [src]="pokemon.img"
-           alt="{{pokemon.name}}"/>
-    </ion-col>
-  </ion-row>
-  <ion-button *ngIf="displayCancelButton" class="delete-pokemon-from-team">
-    <ion-icon name="close" (click)="deletePokemon()"></ion-icon>
-  </ion-button>
-</div>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngFor="let pokemon of myTeam" sizeXs="12" sizeMd="2">
+        <ion-card [ngStyle]="{'background': pokemon.types.length == 1 ?
+                  pokemon.color[0] : 'linear-gradient(to right,'+ pokemon.color[0] + ',' + pokemon.color[1]+ ')'
+                  }"
+        >
+          <ion-card-header>
+            <ion-card-title>#{{pokemon.id}} {{'NAMES.' + pokemon.name | translate}}
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-img id="img" [alt]="pokemon.name" [src]="pokemon.img"></ion-img>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
