--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -5,12 +5,12 @@
     </ion-row>
     <ion-row>
       <ion-col size="1">
-        <ion-button (click)="previousPokemon()" *ngIf="pokemonId > 1">
+        <ion-button color="light" (click)="previousPokemon()" *ngIf="pokemonId > 1">
           <ion-icon name="arrow-back-outline"></ion-icon>
         </ion-button>
       </ion-col>
       <ion-col offsetXs="8" offsetLg="10">
-        <ion-button (click)="nextPokemon()" *ngIf="pokemonId < 151">
+        <ion-button color="light" (click)="nextPokemon()" *ngIf="pokemonId < 151">
           <ion-icon name="arrow-forward-outline"></ion-icon>
         </ion-button>
       </ion-col>
@@ -33,9 +33,9 @@
         <ion-row>
           <ion-text [innerHTML]="'DESC.' + pokemon.name | translate"></ion-text>
         </ion-row>
-        <ion-row (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()"
-        >
-          <ion-button>+</ion-button>
+        <ion-row>
+          <ion-button color="light" (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()"> Add to team
+          </ion-button>
         </ion-row>
         <ion-row>
           <ion-col sizeLg="1">
