--- a/src/app/components/login/login-page.component.html
+++ b/src/app/components/login/login-page.component.html
@@ -5,7 +5,7 @@
       <ion-row>
         <ion-col size="2">
           <ion-label>{{'USERNAME' | translate}}:</ion-label>
-          <ion-input formControlName="name" type="text"></ion-input>
+          <ion-input formControlName="login" type="text"></ion-input>
           <ion-label *ngIf="usernameCtrl.dirty && usernameCtrl.hasError('required')">
             * {{'USERNAME' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
         </ion-col>
