--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -5,30 +5,30 @@
     <ion-row>
       <ion-col size="2">
         <ion-label>{{'USERNAME' | translate}}:</ion-label>
-        <ion-input formControlName="name" type="text"></ion-input>
-        <ion-label *ngIf="usernameCtrl.dirty && usernameCtrl.hasError('required')">{{'USERNAME' | translate}}
+        <ion-input [formControl]="loginCtrl" type="text"></ion-input>
+        <ion-label *ngIf="loginCtrl.dirty && loginCtrl.hasError('required')">{{'USERNAME' | translate}}
           {{'IS_REQUIRED' | translate}}</ion-label>
       </ion-col>
       <form [formGroup]="passwordForm">
         <ion-col>
           <ion-label>{{'PASSWORD' | translate}}:</ion-label>
-          <ion-input formControlName="password" type="password"></ion-input>
+          <ion-input [formControl]="passwordCtrl" type="password"></ion-input>
           <ion-label
             *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')">{{'PASSWORD' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
         </ion-col>
         <ion-col>
           <ion-label>{{'PASSWORD_CONFIRM' | translate}}:</ion-label>
-          <ion-input formControlName="passwordConfirm" type="password"></ion-input>
+          <ion-input [formControl]="passwordConfirmCtrl" type="password"></ion-input>
           <ion-label
             *ngIf="passwordConfirmCtrl.dirty && passwordConfirmCtrl.hasError('required')">{{'PASSWORD_CONFIRM_REQUIRED' | translate}}
           </ion-label>
         </ion-col>
-        <ion-label *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')">
+        <ion-label [ngStyle]="{'color': 'red'}" *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')">
           {{'PASSWORD_NOT_MATCHING' | translate}}
         </ion-label>
       </form>
     </ion-row>
-    <ion-button [disabled]="userForm.invalid" type="submit">{{'VALIDATE' | translate}}</ion-button>
+    <ion-button color="light" [disabled]="userForm.invalid" type="submit">{{'VALIDATE' | translate}}</ion-button>
     </ion-grid>
   </form>
 </ion-content>
