--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,7 +1,9 @@
-<ion-title>{{trainerService.user.value.userName}}</ion-title>
+<ion-grid>
+<ion-row><ion-title>{{trainerService.user.value.userName}}</ion-title></ion-row>
 <form (ngSubmit)="validate()" [formGroup]="userForm">
   <ion-label>Change username :</ion-label>
   <ion-input type="text" [formControl]="userNameCtrl"></ion-input>
   <ion-button color="light" type="submit">{{'VALIDATE' | translate}}</ion-button>
 </form>
+</ion-grid>
 
