--- a/src/app/components/login/login-page.component.html
+++ b/src/app/components/login/login-page.component.html
@@ -1,24 +1,29 @@
-<ion-content>
+<ion-grid>
+<ion-row>
   <ion-title>{{'LOGIN' | translate}}</ion-title>
+</ion-row>
   <form (ngSubmit)="validate()" [formGroup]="userForm">
-    <ion-grid>
-      <ion-row>
-        <ion-col size="2">
-          <ion-label>{{'USERNAME' | translate}}:</ion-label>
-          <ion-input formControlName="login" type="text"></ion-input>
-          <ion-label *ngIf="usernameCtrl.dirty && usernameCtrl.hasError('required')">
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label position="floating">{{'USERNAME' | translate}}</ion-label>
+          <ion-input [formControl]="loginCtrl" type="text"></ion-input>
+          <ion-label *ngIf="loginCtrl.dirty && loginCtrl.hasError('required')">
             * {{'USERNAME' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="2">
-          <ion-label>{{'PASSWORD' | translate}}:</ion-label>
-          <ion-input formControlName="password" type="password"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label position="floating">{{'PASSWORD' | translate}}</ion-label>
+          <ion-input [formControl]="passwordCtrl" type="password"></ion-input>
           <ion-label
             *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')">{{'PASSWORD' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
-        </ion-col>
-      </ion-row>
-        <ion-button [disabled]="userForm.invalid" type="submit">{{'VALIDATE' | translate}}</ion-button>
-    </ion-grid>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-button [disabled]="userForm.invalid" type="submit">{{'VALIDATE' | translate}}</ion-button>
   </form>
-</ion-content>
+</ion-grid>
+
