--- a/src/app/components/all-pokemons/all-pokemons.component.scss
+++ b/src/app/components/all-pokemons/all-pokemons.component.scss
@@ -6,15 +6,11 @@ ion-card {
   cursor: pointer;
 }
 
-.pokemon-image {
-  height: 100px;
+.icon {
+  margin: 0;
 }
 
 .input {
   border: solid 1px #9e9e9ea6;
   border-radius: 50px;
-}
-
-ion-button, ion-text {
-  font-family: 'Press Start 2P', cursive;
 }
