--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -7,7 +7,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="1">
-        <ion-button color="light" (click)="previousPokemon()" *ngIf="pokemonId > 1">
+        <ion-button color="light" (click)="previousPokemon(pokemonId)" *ngIf="pokemonId > 1">
           <ion-icon name="arrow-back-outline"></ion-icon>
         </ion-button>
       </ion-col>
@@ -19,9 +19,7 @@
     </ion-row>
     <ion-row>
       <ion-col sizeLg="10" pushLg="4">
-        <ion-row>
           <ion-img id="img" (click)="playAudio()" [alt]="pokemon.name" [src]="pokemon.img"></ion-img>
-        </ion-row>
         <ion-row>
           <ion-text *ngIf="pokemon.types.length == 1">
             {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_ONE' | translate}}
@@ -36,7 +34,8 @@
           <ion-text [innerHTML]="'DESC.' + pokemon.name | translate"></ion-text>
         </ion-row>
         <ion-row>
-          <ion-button color="light" (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()"> Add to team
+          <ion-button color="light"
+                      (click)="trainerService.user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()"> {{'ADD' | translate}}
           </ion-button>
         </ion-row>
         <ion-row>
@@ -49,31 +48,23 @@
         </ion-row>
         <ion-row>
           <ion-col sizeLg="2">
-            <ion-text>{{'LEVEL' | translate}} :</ion-text>
-            <ion-input (ionChange)="manageLevel($event)" max="100" min="1" type="number"></ion-input>
+            <ion-item>
+              <ion-label>{{'LEVEL' | translate}} :</ion-label>
+              <ion-input (ionChange)="manageLevel($event)" max="100" min="1" type="number"></ion-input>
+            </ion-item>
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-button (click)="nextPokemon()"
+          <ion-button (click)="nextPokemon()" color="success"
                       *ngIf="pokemon.evolutionLevel && level >= pokemon.evolutionLevel">{{'EVOLVE' | translate}}
           </ion-button>
-          <ion-button color="light" (click)="nextPokemon()" *ngIf="pokemon.exchange">{{'EXCHANGE' | translate}}</ion-button>
+          <ion-button color="light" (click)="nextPokemon()"
+                      *ngIf="pokemon.exchange">{{'EXCHANGE' | translate}}</ion-button>
           <div *ngFor="let stone of pokemon.stone">
             <ion-img (click)="useStone(stone)" id="stone" [src]='stone'></ion-img>
           </div>
         </ion-row>
       </ion-col>
-      <!--      <ion-col>-->
-      <!--        <ion-list>-->
-      <!--          <h1>{{'ATTACKS' | translate}}: </h1>-->
-      <!--          &lt;!&ndash;          <ion-item *ngFor="let attacks of pokemon.attacks">&ndash;&gt;-->
-      <!--          &lt;!&ndash;            <ion-label>&ndash;&gt;-->
-      <!--          &lt;!&ndash;              {{attacks}}&ndash;&gt;-->
-      <!--          &lt;!&ndash;            </ion-label>&ndash;&gt;-->
-      <!--          &lt;!&ndash;          </ion-item>&ndash;&gt;-->
-      <!--          <ion-text> Coming soon !</ion-text>-->
-      <!--        </ion-list>-->
-      <!--      </ion-col>-->
     </ion-row>
   </ion-grid>
 </ion-content>
