--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -2,8 +2,8 @@
   <ion-grid>
     <ion-row>
       <ion-col sizeXs="12" sizeMd="3">
-        <ion-input class="input" placeholder="{{'SEARCH POKEMON'| translate}}" type="text" [formControl]="pokemon"
-                   (keyup.enter)="filterByName()"></ion-input>
+        <ion-searchbar placeholder="{{'SEARCH POKEMON'| translate}}" [formControl]="pokemon"
+                   (keyup.enter)="filterByName()"></ion-searchbar>
       </ion-col>
       <ion-col size="auto">
         <ion-button *ngFor="let type of allTypes" [disabled]="this.typeSelectedArray.length === 2" (click)="filterByType([type])"
